<resources>
    <string name="app_name">myAndroidProjekt</string>
    <string name="delete"><![CDATA[<]]></string>
    <string name="deleteAll">С</string>
    <string name="division">/</string>
    <string name="three">3</string>
    <string name="two">2</string>
    <string name="one">1</string>
    <string name="multiplication">*</string>
    <string name="subtraction">-</string>
    <string name="addition">+</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="result">=</string>
    <string name="zero">0</string>
    <string name="dot">.</string>
    <string name="edit_text">edit text</string>
    <string name="button">Button</string>
    <string name="togglebutton">ToggleButton</string>
    <string name="checkbox">CheckBox</string>
    <string name="need_text">NEED Text</string>
    <string name="allDelete">c</string>
    <string name="equally">=</string>
    <string name="open">(</string>
    <string name="closed">)</string>
    <string name="tema">переключение темы</string>

</resources>